# stellarlib

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README  README.md  compile_flags.txt  x86_64-linux-gnu.toolchain.cmake  x86_64-win32-gnu.toolchain.cmake
.github/workflows/: doxygen.yml  gtest.yml
android/app/: .classpath.example  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/app/: MainActivity.java
android/app/src/main/java/com/example/myapplication/: MainActivity.java
android/app/src/main/java/org/stellarlib/app/: SLActivity.java  SLSurface.java
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
blender/: normal.py  sheet.py  stellarlib.py
cmake/: SDL3Subsystems.cmake  aarch64-linux-android.cmake  aarch64-linux-gnu.cmake  arm64-v8a-android.cmake  riscv64-linux-android.cmake  x86_64-android.cmake  x86_64-linux-android.cmake  x86_64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
examples/: android.cpp  ecs.cpp  example.cpp  healthcheck.cpp  scenes.cpp
include/stellarlib/: stellarlib.hpp
include/stellarlib/app/: app.hpp  bridge.hpp  clock.hpp  context.hpp  fwd.hpp  init.hpp  lifecycle.hpp  main.hpp  metadata.hpp  scene.hpp  subsystem.hpp  window.hpp
include/stellarlib/ecs/: any_set.hpp  archetype.hpp  bitset.hpp  command_queue.hpp  ecs.hpp  query.hpp  ring_storage.hpp  sparse_map.hpp  sparse_set.hpp  sparse_storage.hpp  stack_vector.hpp  world.hpp
include/stellarlib/ext/: bit.hpp  filesystem.hpp  functional.hpp  memory.hpp  type_map.hpp  type_traits.hpp  utility.hpp
include/stellarlib/gfx/: gfx.hpp  pods.hpp  renderer.hpp  resource.hpp  stage.hpp  texture.hpp  viewport.hpp
include/stellarlib/lin/: intrinsics.hpp  lin.hpp  matrix.hpp  transformations.hpp
include/stellarlib/res/: image.hpp  res.hpp
src/: stellarlib.cpp
src/app/: clock.cpp  context.cpp  context_impl.cpp  context_impl.hpp  init.cpp  lifecycle.cpp  main.cpp  metadata.cpp  scene.cpp  window.cpp
src/ecs/: any_set.cpp  archetype.cpp  bitset.cpp  command_queue.cpp  sparse_set.cpp  sparse_storage.cpp  world.cpp
src/ext/: filesystem.cpp  memory.cpp
src/gfx/: renderer.cpp  stage.cpp  texture.cpp
src/lin/: intrinsics.cpp
src/res/: image.cpp
tests/: stellarlib.cpp
tests/ecs/: archetype.cpp  bitset.cpp  command_queue.cpp  query.cpp  ring_storage.cpp  sparse_map.cpp  sparse_set.cpp  sparse_storage.cpp  stack_vector.cpp  world.cpp
tests/ext/: bit.cpp  filesystem.cpp  functional.cpp  memory.cpp  type_map.cpp  type_traits.cpp  utility.cpp
tests/lin/: intrinsics.cpp  matrix.cpp  transformations.cpp
tests/res/: image.cpp
