cmake_minimum_required(VERSION 3.29)
project(stellarlib VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_EXTENSIONS OFF)
include_directories(${CMAKE_SOURCE_DIR}/include)
file(READ ${CMAKE_SOURCE_DIR}/compile_flags.txt CMAKE_CXX_FLAGS)
string(REPLACE \n \  CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
set(CMAKE_CXX_FLAGS_DEBUG -save-temps\ -Wno-gnu-line-marker)
set(CMAKE_CXX_FLAGS_RELEASE -flto)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_program(CMAKE_CXX_CLANG_TIDY clang-tidy)

file(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
add_library(${PROJECT_NAME} STATIC ${SOURCES})
find_package(SDL3 REQUIRED)
target_link_libraries(${PROJECT_NAME} SDL3::SDL3)
if(WIN32)
	file(
		GLOB_RECURSE WIN32_RUNTIME_DLLS
		${CMAKE_FIND_ROOT_PATH}/${CMAKE_SHARED_LIBRARY_PREFIX}gcc*${CMAKE_SHARED_LIBRARY_SUFFIX}
		${CMAKE_FIND_ROOT_PATH}/${CMAKE_SHARED_LIBRARY_PREFIX}ssp*${CMAKE_SHARED_LIBRARY_SUFFIX}
		${CMAKE_FIND_ROOT_PATH}/${CMAKE_SHARED_LIBRARY_PREFIX}stdc++*${CMAKE_SHARED_LIBRARY_SUFFIX}
		${CMAKE_FIND_ROOT_PATH}/${CMAKE_SHARED_LIBRARY_PREFIX}winpthread*${CMAKE_SHARED_LIBRARY_SUFFIX}
	)
	add_custom_command(
		TARGET ${PROJECT_NAME} POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:${PROJECT_NAME}> ${WIN32_RUNTIME_DLLS}
		COMMAND_EXPAND_LISTS
	)
elseif(ANDROID)
	set(ANDROID_JNI_DIR ${CMAKE_SOURCE_DIR}/android/app/src/main/jniLibs)
	file(REMOVE_RECURSE ${ANDROID_JNI_DIR})
	set(ANDROID_JNI_DIR ${ANDROID_JNI_DIR}/${ANDROID_ABI})
	file(MAKE_DIRECTORY ${ANDROID_JNI_DIR})
endif()

find_program(DOXYGEN doxygen)
if(DOXYGEN)
	file(GLOB_RECURSE HEADERS ${CMAKE_SOURCE_DIR}/include/${PROJECT_NAME}/*.hpp)
	add_custom_command(
		OUTPUT ${CMAKE_BINARY_DIR}/html
		COMMAND ${CMAKE_COMMAND} -E env DOXYGEN_OUTPUT_DIRECTORY=${CMAKE_BINARY_DIR} ${DOXYGEN}
		DEPENDS ${CMAKE_SOURCE_DIR}/README.md ${HEADERS}
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
	)
	add_custom_target(docs ALL DEPENDS ${CMAKE_BINARY_DIR}/html)
endif()

find_package(GTest)
if(TARGET GTest::gtest_main)
	file(GLOB_RECURSE TESTS ${CMAKE_SOURCE_DIR}/tests/*.cpp)
	foreach(SOURCE ${TESTS})
		get_filename_component(TEST ${SOURCE} NAME_WLE)
		set(TEST test_${TEST})
		add_executable(${TEST} EXCLUDE_FROM_ALL ${SOURCE})
		target_link_libraries(${TEST} GTest::gtest_main ${PROJECT_NAME})
		if(WIN32)
			add_custom_command(
				TARGET ${TEST} POST_BUILD
				COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:tests> $<TARGET_RUNTIME_DLLS:tests>
				COMMAND_EXPAND_LISTS
			)
		endif()
	endforeach()
	add_executable(tests EXCLUDE_FROM_ALL ${TESTS})
	target_link_libraries(tests GTest::gtest_main ${PROJECT_NAME})
	if(WIN32)
		add_custom_command(
			TARGET tests POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:tests> $<TARGET_RUNTIME_DLLS:tests>
			COMMAND_EXPAND_LISTS
		)
	endif()
endif()

file(GLOB_RECURSE EXAMPLES ${CMAKE_SOURCE_DIR}/examples/*.cpp)
add_custom_target(examples)
foreach(SOURCE ${EXAMPLES})
	get_filename_component(EXAMPLE ${SOURCE} NAME_WLE)
	if(ANDROID)
		add_library(${EXAMPLE} SHARED EXCLUDE_FROM_ALL ${SOURCE})
	else()
		add_executable(${EXAMPLE} WIN32 EXCLUDE_FROM_ALL ${SOURCE})
	endif()
	target_link_libraries(${EXAMPLE} ${PROJECT_NAME})
	if(WIN32)
		add_custom_command(
			TARGET ${EXAMPLE} POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:${EXAMPLE}> $<TARGET_RUNTIME_DLLS:${EXAMPLE}>
			COMMAND_EXPAND_LISTS
		)
	elseif(ANDROID)
		add_custom_command(
			TARGET ${EXAMPLE} POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:SDL3::SDL3> ${ANDROID_JNI_DIR}
			COMMAND ${CMAKE_COMMAND} -E copy_if_different
				$<TARGET_FILE:${EXAMPLE}>
				${ANDROID_JNI_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}main${CMAKE_SHARED_LIBRARY_SUFFIX}
			COMMAND ${CMAKE_COMMAND} -E env
				ANDROID_APPLICATION_ID=org.stellarlib.${EXAMPLE}
				ANDROID_PLATFORM=${ANDROID_PLATFORM}
				ANDROID_VERSION_NAME=${PROJECT_VERSION}
				ANDROID_APP_NAME=${EXAMPLE}
				./gradlew assembleDebug
			COMMAND ${CMAKE_COMMAND} -E copy_if_different
				${CMAKE_SOURCE_DIR}/android/app/build/outputs/apk/debug/app-debug.apk
				${CMAKE_BINARY_DIR}/${EXAMPLE}.apk
			BYPRODUCTS ${EXAMPLE}.apk
			WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/android
			COMMAND_EXPAND_LISTS
		)
	endif()
	add_dependencies(examples ${EXAMPLE})
endforeach()

include(GNUInstallDirs)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets)
install(EXPORT ${PROJECT_NAME}Targets DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME} NAMESPACE ${PROJECT_NAME}::)
include(CMakePackageConfigHelpers)
configure_package_config_file(
	${CMAKE_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake.in
	${CMAKE_BINARY_DIR}/${PROJECT_NAME}Config.cmake
	INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
install(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}Config.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
install(FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/licenses/${PROJECT_NAME})
if(DOXYGEN)
	install(DIRECTORY ${CMAKE_BINARY_DIR}/html DESTINATION ${CMAKE_INSTALL_DOCDIR})
endif()
